# fyp-server

./: .gitignore  README.md  insert_stock_info.py  milvus_test.py  news_data.json  pyproject.toml  stock_info.csv  test.py  test2.py
src/: __main__.py  config.py  server.py
src/domain/: di_container.py
src/domain/member/application/: member_service.py
src/domain/member/application/dto/request/: login_request.py  signup_request.py
src/domain/member/domain/: member_repository.py
src/domain/member/domain/model/: member.py
src/domain/member/presentation/: member_controller.py
src/domain/news/domain/models/: news.py
src/domain/news/presentation/: polling_schedule.py
src/domain/sample/: sample_controller.py
src/domain/sample/application/: sample_service.py
src/domain/sample/presentation/: sample_controller.py
src/domain/search/application/dto/: get_embedding_search_response.py
src/domain/stock/application/: stock_info_fetcher.py  stock_info_service.py  user_stock_service.py
src/domain/stock/domain/: stock_info_repository.py  user_stock_repository.py
src/domain/stock/domain/model/: stock_info.py  user_stock.py
src/domain/stock/presentation/: stock_info_controller.py  user_stock_controller.py
src/domain/user/application/: user_service.py
src/domain/user/domain/: user_repository.py
src/domain/user/domain/model/: user.py
src/domain/user/presentation/: user_controller.py
src/shared/api/: stock_api.py
src/shared/database/: connection.py  session.py
src/shared/exception/: base.py
src/shared/utils/: auth_util.py
(+11 files in other folders)
