[tool.poetry]
name = "fyp-server"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
black = "^24.10.0"
isort = "^5.13.2"


[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
